# kinode-memedeck

./: Cargo.toml  README.md  metadata.json
crate/shared/: Cargo.toml
crate/shared/src/: lib.rs
memedeck/: Cargo.toml
memedeck/src/: icon  lib.rs  tg.rs  types.rs
memedeck/src/twitter/: types.rs
pkg/: manifest.json  tg.wasm
pkg/ui/: 404.html  explore.html  explore.txt  home.html  home.txt  index.html  index.txt  invite.html  invite.txt  library.html  library.txt  studio.html  studio.txt  telegram-bot.html  telegram-bot.txt  trending.html  trending.txt  waitlist.html  waitlist.txt
pkg/ui/_next/static/TgHmLlDH7lxPxgs8vU1O9/: _buildManifest.js
pkg/ui/_next/static/chunks/: 10-41f0826a9259d98f.js  102-62828efa0ad998b9.js  1035-578cdc30123ac68a.js  1133-c3d5f5df61380be1.js  116-b5297dfed5f88308.js  120-f6751581de516f21.js  1202-67419d20a593d599.js  1271-8bfc59064fff4839.js  130-25292af94e2ad598.js  130-45dde4ae706db1d4.js  133-52bfec60166cc5a6.js  1332-4e2dabafeca0b7f6.js  1332-c024604aadcba4fb.js  1397-ca4f59b3883a708d.js  142-eeee9a2ff26c91bb.js  1510-e9e0d529e16540f5.js  1599-9126fac3c4385469.js  1639-b80d9023a605b297.js  164-1832c64dc4a77f44.js  1649-f6ea980abff55970.js  1670-c6d06a0393b45bcb.js  168-7f9b35bb458aff4c.js  171-b7d553ab9b624a4c.js  1718-62aa9f9312aa91c0.js  1718-77ff718bb0091ca9.js  177-2106012b0eb99a1b.js  177-dc5b20ed1de6520f.js  1775-104de0c323a59c34.js  1866-f97707319fb3d778.js  1904-42120f4fda6b8335.js  1904-85980bf7de3cda89.js  1995-add7ac26e976acf8.js  203-ca8600d93c0b5806.js  2046-aa3dfea09238b96c.js  2073-fb40480624282499.js  2079-059a7d63d76bbf77.js  2138-13819a92c0304cfc.js  2142-58e09f5dcbad1b6f.js  2221-fdb9df9b154cb76f.js  223-a745ba70249d0e60.js  (+316 more)
pkg/ui/_next/static/css/: 0a2536fa35df193f.css  11274731ed0ef2f3.css  278f66a6fa802c40.css  27a348209a4d4a95.css  2bfbcdfee997a89b.css  3e2b5c5669c3199a.css  4698db7146d0d6fd.css  64989d1c81c4ff50.css  6e93bd2377b2817e.css  7b467443c4bdd6ca.css  8df4a8ce09c3d809.css  a576efec537b3385.css  b0aabc7d719c2ffa.css  c497b38987b9e690.css  d645421ea77f3973.css  da15a6d9fe4a4fb9.css  e5bbd100c37c16c5.css  f45c652f1f809c23.css  f832c500a2f5516c.css  fe33133ae76d45b9.css
pkg/ui/_next/static/fvDeUt7gTPXoF7gEyLBUP/: _buildManifest.js
pkg/ui/_next/static/m0GTjuWoOW82YFe-AeRIM/: _buildManifest.js
pkg/ui/_next/static/nwiMWR-Xv6VedLiGCkaRQ/: _buildManifest.js
pkg/ui/_next/static/sjqzuUOZSIlKAWNfYlrTv/: _buildManifest.js
pkg/ui/_next/static/uVNKr6W7uSJFi9VOVSikY/: _buildManifest.js
pkg/ui/character/: reserved.html  reserved.txt
pkg/ui/content/: how_to_throw_contest.md  privacy_policy.md  terms_of_service.md
pkg/ui/deck/: edit.html  edit.txt  reserved.html  reserved.txt
pkg/ui/deck-edit/: reserved.html  reserved.txt
pkg/ui/deck/edit/: reserved.html  reserved.txt
pkg/ui/deck/reserved/: edit.html  edit.txt
pkg/ui/home/: reserved.html  reserved.txt
pkg/ui/trending/: reserved.html  reserved.txt
pkg/ui/u/: reserved.html  reserved.txt
pkg/ui/u/reserved/: bookmarks.html  bookmarks.txt  decks.html  decks.txt  drafts.html  drafts.txt
storage/: Cargo.toml
storage/src/: lib.rs  structs.rs
worker/: Cargo.toml
worker/src/: lib.rs
(+284 files in other folders)
