[package]
name = "memedeck"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", tag = "v0.6.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "21a46c7" }
url = "2.5.0"
regex = "1.10.3"
uuid = { version = "1.7.0", features = ["v4"] }
percent-encoding = "2.3.1"
hmac = "0.12.1"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
