[package]
name = "memedeck"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", tag = "v0.8.1" }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.24.0"
url = "2.5.0"
regex = "1.10.3"
uuid = { version = "1.7.0", features = ["v4"] }
telegram_interface = { git = "https://github.com/kinode-dao/telegram-bot/", branch = "zen/interface" }
frankenstein = { version = "0.30", default-features = false, features = ["telegram-trait"] }
shared = { path = "../crate/shared" }
storage_interface = { git = "https://github.com/kinode-dao/command_center/", branch = "storage_interface" }
llm_interface = { git = "https://github.com/kinode-dao/llm", branch = "interface"}

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
