[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", tag = "v0.9.3" }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.120"
wit-bindgen = "0.24.0"
chrono = "0.4"
storage_interface = { git = "https://github.com/kinode-dao/command_center/", branch = "storage_interface" }


[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
