[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", tag = "v0.9.3" }
wit-bindgen = "0.24.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.120"
url = "2.5.0"
shared = { path = "../crate/shared" }
Inflector = "0.11.4"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
