[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", tag = "v0.8.5" }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.120"
url = "2.5.0"
percent-encoding = "2.3.1"
telegram_interface = { git = "https://github.com/kinode-dao/telegram-bot/", branch = "zen/interface" }
frankenstein = { version = "0.30", default-features = false, features = ["telegram-trait"] }
